--- a/package.json
+++ b/package.json
@@ -9,12 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^4.7.1",
+    "@walletconnect/web3-provider": "^1.7.8",
+    "@web3auth/web3auth": "^1.1.1",
+    "ethers": "^5.6.9",
+    "magic-sdk": "^8.1.1",
+    "moment": "^2.29.4",
+    "moralis": "^1.9.1",
     "next": "12.2.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.4.0",
+    "react-moralis": "^1.4.0",
+    "react-simple-hook-modal": "^1.1.0",
+    "react-spinners": "^0.13.3",
+    "web3uikit": "^1.0.2"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.7",
     "eslint": "8.20.0",
-    "eslint-config-next": "12.2.3"
+    "eslint-config-next": "12.2.3",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.6"
   }
 }
